bdr.BDR.scala.error
Erreur de compilation :
BDR:51: error: Unmatched closing brace '}' ignored here
	}
        ^